# rprs

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: CI.yml  release.yml
src/: lib.rs  main.rs
test/src/: a.txt  b.txt  d.txt
